--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,11 @@
-<h1>My Cool App</h1>
+<!-- <h1>My Cool App</h1>
 <nav>
   <a routerLink="/">Home</a>
   <br/>
   <a routerLink="/products">Products</a>  
 </nav>
-<router-outlet></router-outlet>
+<router-outlet></router-outlet> -->
+
+<!-- <button mat-button color="accent">
+  <mat-icon>home</mat-icon>
+</button> -->
