--- a/src/app/auth/signup/signup.component.css
+++ b/src/app/auth/signup/signup.component.css
@@ -1,11 +1,11 @@
-#container {
+/* #container {
     display: flex;
     width: 100%;
     height: 700px;
     border: 1px black solid;
-    flex-direction: row; /*column vs row*/
-    justify-content: flex-start;  /*along main axis */
-    align-items: center;  /*along cross axis */
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
 }
 
 .child {
@@ -23,4 +23,9 @@
 
 #child3 {
     background-color: blue;
+} 
+*/
+
+mat-form-field {
+    width: 300px;
 }
