--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -1,15 +1,52 @@
-<section>
-    <form>
+<section class="signup-form">
+    <form fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="10px" #f="ngForm" (ngSubmit)="onSubmit(f)">
         <mat-form-field>
-            <input type="email" matInput placeholder="Your email"> 
+            <input 
+                type="email"
+                matInput
+                placeholder="Your email"
+                ngModel
+                name="email"
+                required
+                email
+                #emailInput="ngModel">
+            @if (emailInput.hasError('required')) {
+                <mat-error>Field must not be empty.</mat-error>   
+            } @else {
+                <mat-error>E-mail is invalid.</mat-error>
+            }
+        </mat-form-field> 
+        <mat-form-field hintLabel="Should be at least 6 characters long.">
+            <input
+                type="password"
+                matInput
+                placeholder="Your Password"
+                ngModel
+                name="password"
+                required
+                minlength="6"
+                #pwInput="ngModel"> 
+            <mat-hint align="end"> {{ pwInput.value?.length }} / 6</mat-hint>
+            <mat-error>Has to be at least 6 characters long.</mat-error>
         </mat-form-field> 
         <mat-form-field>
-            <input type="password" matInput placeholder="Your Password"> 
-        </mat-form-field> 
+            <input 
+                matInput 
+                placeholder="Your birthdate" 
+                [matDatepicker]="picker"
+                [max]="maxDate"
+                ngModel
+                name="birthdate"
+                required>
+            <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+            <mat-datepicker #picker></mat-datepicker>
+        </mat-form-field>
+        <mat-checkbox labelPosition="before" ngModel name="agree" required>Agree to Terms and Conditions.</mat-checkbox>
+        <button type="submit" mat-raised-button color="primary" [disabled]="f.invalid">Submit</button>
     </form>
 </section>
-<section id="container">
+<!-- <section id="container">
     <div id="child1" class="child"></div>
     <div id="child2" class="child"></div>
     <div id="child3" class="child"></div>
-</section>
+</section> -->
