--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,5 +10,47 @@
   <mat-icon>home</mat-icon>
 </button> -->
 
-
-<router-outlet></router-outlet>
+<mat-sidenav-container>
+  <mat-sidenav #sidenav role="navigation">
+    <mat-nav-list>
+      <mat-list-item routerLink="/signup" (click)="sidenav.close()">
+        <mat-icon>face</mat-icon>
+        <span class="nav-caption">Signup</span>
+      </mat-list-item>
+      <mat-list-item routerLink="/login" (click)="sidenav.close()">
+        <mat-icon>login</mat-icon>
+        <span class="nav-caption">Login</span>
+      </mat-list-item>
+      <mat-list-item routerLink="/training" (click)="sidenav.close()">
+        <mat-icon>fitness_center</mat-icon>
+        <span class="nav-caption">Training</span>
+      </mat-list-item>
+      <mat-list-item (click)="sidenav.close()">
+        <mat-icon>power_settings_new</mat-icon>
+        <span class="nav-caption">Logout</span>
+      </mat-list-item>
+    </mat-nav-list>
+  </mat-sidenav>
+  <mat-sidenav-content>
+    <!-- <button (click)="sidenav.toggle()">Show Sidenav</button> -->
+    <mat-toolbar color="primary">
+      <div fxHide.gt-xs>
+        <button mat-icon-button (click)="sidenav.toggle()">
+          <mat-icon>menu</mat-icon>
+        </button>
+      </div>
+      <div routerLink="/">LOGO</div>
+      <div fxFlex fxLayout fxLayoutAlign="flex-end" fxHide.xs>
+        <ul fxLayout fxLayoutGap="10px" class="navigation-items">
+          <li><a routerLink="/signup">Signup</a></li>
+          <li><a routerLink="/login">Login</a></li>
+          <li><a routerLink="/training">Training</a></li>
+          <li><a>Logout</a></li>
+        </ul>
+      </div>
+    </mat-toolbar>
+    <main>
+      <router-outlet></router-outlet>
+    </main>  
+  </mat-sidenav-content>
+</mat-sidenav-container>
