--- a/src/styles.css
+++ b/src/styles.css
@@ -4,3 +4,12 @@
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; } */
 
 @import "@angular/material/prebuilt-themes/indigo-pink.css";
+
+html, body {
+    font-family: 'Roboto', sans-serif;
+    height: 100%;
+}
+
+body {
+    margin: 0;
+}
