--- a/src/app/navigation/header/header.component.html
+++ b/src/app/navigation/header/header.component.html
@@ -7,10 +7,13 @@
     <div routerLink="/">LOGO</div>
     <div fxFlex fxLayout fxLayoutAlign="flex-end" fxHide.xs>
       <ul fxLayout fxLayoutGap="10px" class="navigation-items">
+        @if (!isAuth) {
         <li><a routerLink="/signup">Signup</a></li>
-        <li><a routerLink="/login">Login</a></li>
+        <li><a routerLink="/login">Login</a></li>          
+        } @else {
         <li><a routerLink="/training">Training</a></li>
         <li><a>Logout</a></li>
+        }
       </ul>
     </div>
   </mat-toolbar>
