--- a/src/app/navigation/sidenav-list/sidenav-list.component.html
+++ b/src/app/navigation/sidenav-list/sidenav-list.component.html
@@ -1,5 +1,6 @@
 <mat-nav-list>
-    <mat-list-item routerLink="/signup" (click)="onClose()">
+  @if(!isAuth) {
+        <mat-list-item routerLink="/signup" (click)="onClose()">
       <mat-icon>face</mat-icon>
       <span class="nav-caption">Signup</span>
     </mat-list-item>
@@ -7,7 +8,8 @@
       <mat-icon>login</mat-icon>
       <span class="nav-caption">Login</span>
     </mat-list-item>
-    <mat-list-item routerLink="/training" (click)="onClose()">
+  } @else {
+        <mat-list-item routerLink="/training" (click)="onClose()">
       <mat-icon>fitness_center</mat-icon>
       <span class="nav-caption">Training</span>
     </mat-list-item>
@@ -15,4 +17,5 @@
       <mat-icon>power_settings_new</mat-icon>
       <span class="nav-caption">Logout</span>
     </mat-list-item>
+  }
   </mat-nav-list>
