--- a/src/app/navigation/header/header.component.html
+++ b/src/app/navigation/header/header.component.html
@@ -12,7 +12,7 @@
         <li><a routerLink="/login">Login</a></li>          
         } @else {
         <li><a routerLink="/training">Training</a></li>
-        <li><a>Logout</a></li>
+        <li><a style="cursor: pointer;" (click)="onLogout()">Logout</a></li>
         }
       </ul>
     </div>
