--- a/src/app/navigation/sidenav-list/sidenav-list.component.html
+++ b/src/app/navigation/sidenav-list/sidenav-list.component.html
@@ -13,7 +13,7 @@
       <mat-icon>fitness_center</mat-icon>
       <span class="nav-caption">Training</span>
     </mat-list-item>
-    <mat-list-item (click)="onClose()">
+    <mat-list-item (click)="onLogout()">
       <mat-icon>power_settings_new</mat-icon>
       <span class="nav-caption">Logout</span>
     </mat-list-item>
