--- a/src/app/training/new-training/new-training.component.html
+++ b/src/app/training/new-training/new-training.component.html
@@ -10,8 +10,8 @@
                     ngModel
                     name="exercise"
                     required>
-                    @for (exercise of exercises; track exercise.id) {
-                        <mat-option [value]="exercise.id">{{ exercise.name }}</mat-option>
+                    @for (exercise of exercises | async; track exercise.id) {
+                        <mat-option [value]="exercise.name">{{ exercise.name }}</mat-option>
                     }
                 </mat-select>
             </mat-form-field>
