--- a/src/app/navigation/header/header.component.html
+++ b/src/app/navigation/header/header.component.html
@@ -4,7 +4,7 @@
         <mat-icon>menu</mat-icon>
       </button>
     </div>
-    <div routerLink="/">LOGO</div>
+    <div routerLink="/">NG Fitness</div>
     <div fxFlex fxLayout fxLayoutAlign="flex-end" fxHide.xs>
       <ul fxLayout fxLayoutGap="10px" class="navigation-items">
         @if (!isAuth) {
