--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -33,11 +33,15 @@
             <mat-hint>Please enter your password.</mat-hint>
             <mat-error>Missing password.</mat-error>
         </mat-form-field> 
-        <button 
-            type="submit" 
-            mat-raised-button 
-            color="primary" 
-            [disabled]="!loginForm.valid">
-        Submit</button>
+       @if(!isLoading) {
+            <button 
+                type="submit" 
+                mat-raised-button 
+                color="primary" 
+                [disabled]="!loginForm.valid">
+            Submit</button>
+       } @else {
+            <mat-spinner></mat-spinner>
+       }   
     </form>
 </section>
