--- a/src/app/training/new-training/new-training.component.html
+++ b/src/app/training/new-training/new-training.component.html
@@ -2,23 +2,34 @@
   <form (ngSubmit)="onStartTraining(f)" #f="ngForm">
     <mat-card fxFlex.xs="100%" fxFlex="400px">
         <mat-card-title fxLayoutAlign="center">Time to start a workout!</mat-card-title>
-        <mat-card-content fxLayoutAlign="center">
-            <mat-form-field>
-                <mat-label>Select type of training</mat-label>
-                <mat-select 
-                    placeholder="Choose Exercise" 
-                    ngModel
-                    name="exercise"
-                    required>
-                    @for (exercise of exercises; track exercise.id) {
-                        <mat-option [value]="exercise.id">{{ exercise.name }}</mat-option>
+            <mat-card-content fxLayoutAlign="center">
+              @if (!isLoading && exercises) {
+                <mat-form-field>
+                    <mat-label>Select type of training</mat-label>
+                    <mat-select 
+                        placeholder="Choose Exercise" 
+                        ngModel
+                        name="exercise"
+                        required>
+                        @for (exercise of exercises; track exercise.id) {
+                            <mat-option [value]="exercise.id">{{ exercise.name }}</mat-option>
+                        }
+                    </mat-select>
+                </mat-form-field>
+              } 
+              @if (isLoading) {
+                <mat-spinner></mat-spinner>
+              }
+            </mat-card-content>
+            @if (!isLoading) {
+                <mat-card-actions fxLayoutAlign="center">
+                    @if (exercises) {
+                      <button type="submit" mat-button [disabled]="f.invalid">Start</button>
+                    } @else {
+                      <button type="button" mat-button (click)="fetchExercises()">Fetch Again</button>
                     }
-                </mat-select>
-            </mat-form-field>
-        </mat-card-content>
-        <mat-card-actions fxLayoutAlign="center">
-            <button type="submit" mat-button [disabled]="f.invalid">Start</button>
-        </mat-card-actions>
+                </mat-card-actions>
+            }
     </mat-card>
   </form>
 </section>
