--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -33,7 +33,7 @@
             <mat-hint>Please enter your password.</mat-hint>
             <mat-error>Missing password.</mat-error>
         </mat-form-field> 
-       @if(!isLoading$ | async ) {
+       @if(!(isLoading$ | async )) {
             <button 
                 type="submit" 
                 mat-raised-button 
