--- a/src/app/navigation/header/header.component.html
+++ b/src/app/navigation/header/header.component.html
@@ -7,10 +7,11 @@
     <div routerLink="/">NG Fitness</div>
     <div fxFlex fxLayout fxLayoutAlign="flex-end" fxHide.xs>
       <ul fxLayout fxLayoutGap="10px" class="navigation-items">
-        @if (!isAuth) {
+        @if (!(isAuth$ | async)) {
         <li><a routerLink="/signup">Signup</a></li>
         <li><a routerLink="/login">Login</a></li>          
-        } @else {
+        }
+        @if (isAuth$ | async) {
         <li><a routerLink="/training">Training</a></li>
         <li><a style="cursor: pointer;" (click)="onLogout()">Logout</a></li>
         }
