--- a/src/app/navigation/sidenav-list/sidenav-list.component.html
+++ b/src/app/navigation/sidenav-list/sidenav-list.component.html
@@ -1,5 +1,5 @@
 <mat-nav-list>
-  @if(!isAuth) {
+  @if(!(isAuth$ | async)) {
         <mat-list-item routerLink="/signup" (click)="onClose()">
       <mat-icon>face</mat-icon>
       <span class="nav-caption">Signup</span>
@@ -8,7 +8,8 @@
       <mat-icon>login</mat-icon>
       <span class="nav-caption">Login</span>
     </mat-list-item>
-  } @else {
+  }
+  @if(isAuth$ | async) {
         <mat-list-item routerLink="/training" (click)="onClose()">
       <mat-icon>fitness_center</mat-icon>
       <span class="nav-caption">Training</span>
